--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue_pagination",
+  "name": "vue-pagenavs",
   "description": "A Vue.js project",
   "version": "1.0.0",
   "author": "zhangmin <zhangmin@channelsoft.com>",
